--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,79 @@
-.App {
+body {
+  height: 100%;
+}
+
+.App{
+  margin-top: 20px;
+}
+
+#root {
   text-align: center;
 }
 
-.App-body {
-  background-color: #687186;
-  min-height: 100vh;
-  min-width: 400px;
-  max-width: 800px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scoreboard {
+  margin: 10px auto;
 }
+
+.two, .one{
+  text-align: center;
+  width: 23%;
+  top: 20%;
+}
+
+.one{
+  float: left;
+}
+
+.two {
+  float: left;
+}
+
+.board {
+  background-color: brown;
+  width: 50%;
+  height: 30vw;
+  float: left;
+}
+
+.deck-img {
+  max-width: 30%;
+}
+
+.cards-left {
+  float: left;
+}
+.card{
+  margin: 30px 10px;
+}
+
+#playerOneCard{
+  float: left;
+  max-width: 30%;
+}
+
+#playerTwoCard {
+  float: right;
+  max-width: 30%;
+}
+
+.card img {
+  max-width: 100%;
+  max-height: 80%;
+}
+
+.playerBoard {
+  background-color: forestgreen;
+  padding: 40px 0px;
+}
+
+.playerBoard:after{
+  content: '';
+  display:table;
+  clear: both;
+}
+
+.title {
+  clear: both;
+  text-align: center;
+  font-size: 25px;
+  padding-top: 20px;
